[project]
name = "awesome-python-leetcode"
version = "0.0.1"
description = "Python Solutions for LeetCode Problems!"
authors = [
    { name = "Dennis Jabs" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "numpy>=2.2.5",
]

[dependency-groups]
dev = [
    "black>=23.7.0",
    "flake8>=7.3.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.1",
]

[project.urls]
Homepage = "https://github.com/nobodyPerfecZ/python-project-template"
Issues = "https://github.com/nobodyPerfecZ/python-project-template/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
